--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "eslint": "^8.10.0",
+    "eslint-config-next": "^12.1.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -14,6 +16,7 @@
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
+    "eslint-plugin-tailwindcss": "^3.5.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
